fixing z-index issue

--- a/client/style.css
+++ b/client/style.css
@@ -185,7 +185,7 @@ header {
 	flex-direction: column;
 	left: 0;
 	top: 0;
-	z-index: 5;
+	z-index: 10;
 	width: 100%;
 	height: 100%;
 	overflow: none;
